--- a/Site/media/css/sobipro.less
+++ b/Site/media/css/sobipro.less
@@ -33,8 +33,8 @@ iframe, svg { max-width: inherit; }
 }
 
 /* to overcome Joomla's IcoMoon when Font Awesome 3 is loaded via CDN */
-[class^="icon-"]::before,
-[class*=" icon-"]::before {
+.SobiPro [class^="icon-"]::before,
+.SobiPro [class*=" icon-"]::before {
 	font-family: 'FontAwesome';
 }
 
