(#) button margins corrected

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -1587,6 +1587,8 @@ body.modal-open {
 		font-weight: 700;
 	}
 
+	.spEditDesc,
+	.spSearchDesc,
 	.spSectionDesc {
 		margin-bottom: 30px;
 		margin-top: 20px;
@@ -1894,6 +1896,9 @@ body.modal-open {
 			content: "";
 			padding-right: 5px;
 		}
+		button.sobipro-cancel {
+			margin-right: 5px;
+		}
 	}
 
 	.spSearch select.spClassCategory,
@@ -2123,6 +2128,12 @@ body.modal-open {
 	.spSearchBottom {
 		margin-bottom: 10px;
 	}
+
+	button.bottom-search,
+	button.top-search {
+		margin-left: 5px;
+	}
+
 
 	// Payment popup
 	// ----------------------------------------
