--- a/Site/usr/templates/b3-default3/themes/custom.less
+++ b/Site/usr/templates/b3-default3/themes/custom.less
@@ -14,15 +14,23 @@
 // This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
-
 // SobiPro custom color theme
 // Use custom for @colour-set in theme.less
 // ------------------------------------------------
+// @active-color (dark) on @base-color (light)
+// @important-color (dark) on @alert-color (light)
+// @text-color (light)
+// @hover-color (light)
 
 @base-color: #993333;
-@text-color: #FFFFFF;
-@hover-color: #FFFFFF;
+@text-color: #ffffff;
+@hover-color: #ffffff;
 @font-color: #333333;
 @active-color: #000066;
-@alert-color: #CCCCCC;
-@important-color: #fec1af;
+@alert-color: #cccccc;
+@important-color: #feb495;
+@background-light: #fbeeee;
+@background-medium: #f9d1d1;
+@background-dark: #ed8282;
+
+
