--- a/Site/usr/templates/b3-default3/themes/roses.less
+++ b/Site/usr/templates/b3-default3/themes/roses.less
@@ -5,7 +5,7 @@
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -18,11 +18,18 @@
 // Roses color theme (red/rose)
 // Use roses for @colour-set in theme.less
 // ------------------------------------------------
+// @active-color (dark) on @base-color (light)
+// @important-color (dark) on @alert-color (light)
+// @text-color (light)
+// @hover-color (light)
 
-@base-color: #E02620;
-@text-color: #FFFFFF;
-@hover-color: #FFFFFF;
+@base-color: #e02620;
+@text-color: #ffffff;
+@hover-color: #ffffff;
 @font-color: #333333;
-@active-color: #9C1A16;
-@alert-color: #F8ACAB;
-@important-color: #E02620;
+@active-color: #9c1a16;
+@alert-color: #81ec76;
+@important-color: #03741c;
+@background-light: #fff1f1;
+@background-medium: #ffd9d7;
+@background-dark: #f89d9b;
