--- a/Site/usr/templates/b3-default3/themes/terra.less
+++ b/Site/usr/templates/b3-default3/themes/terra.less
@@ -1,28 +1,35 @@
-/*
- @package: SobiRestara SobiPro Template
+// @package: SobiPro Component for Joomla!
 
- @author
- Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
- Email: sobi[at]sigsiu.net
- Url: https://www.Sigsiu.NET
+// @author
+// Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
+// Email: sobi[at]sigsiu.net
+// Url: https://www.Sigsiu.NET
 
- @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
- @license Released under Sigsiu.NET Template License V1.
- You may use this SobiPro template on an unlimited number of SobiPro installations and may modify it for your needs.
- You are not allowed to distribute modified or unmodified versions of this template for free or paid.
+// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @license GNU/GPL Version 3
+// This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
+// as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+// See http://www.gnu.org/licenses/gpl.html and https://www.sigsiu.net/licenses.
 
- This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-*/
+// This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
 // SobiPro color theme (SobiPro colors)
 // Use sobipro for @colour-set in theme.less
 // ------------------------------------------------
+// @active-color (dark) on @base-color (light)
+// @important-color (dark) on @alert-color (light)
+// @text-color (light)
+// @hover-color (light)
 
 @base-color: #764719;
-@text-color: #FFFFFF;
-@hover-color: #FFFFFF;
+@text-color: #ffffff;
+@hover-color: #ffffff;
 @font-color: #333333;
 @active-color: #472300;
-@alert-color: #f9bc03;
+@alert-color: #fbc41f;
 @important-color: #a83000;
+@background-light: #fce5cf;
+@background-medium: #efbc8b;
+;
+@background-dark: #e08c3b;
