--- a/Site/usr/templates/b3-default3/themes/cornfield.less
+++ b/Site/usr/templates/b3-default3/themes/cornfield.less
@@ -5,7 +5,7 @@
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,15 +14,21 @@
 // This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
-
 // Cornfield color theme (yellow/orange/brown)
 // Use cornfield for @colour-set in theme.less
 // ------------------------------------------------
+// @active-color (dark) on @base-color (light)
+// @important-color (dark) on @alert-color (light)
+// @text-color (light)
+// @hover-color (light)
 
-@base-color: #FFC119;
+@base-color: #ffc119;
 @text-color: #521b00;
-@hover-color: #FFCD47;
+@hover-color: #ffcd47;
 @font-color: #333333;
 @active-color: #6b1e00;
 @alert-color: #ffb866;
-@important-color: #864830;
+@important-color: #b64a21;
+@background-light: #fff8e4;
+@background-medium: #ffe8a9;
+@background-dark: #ffd258;
