--- a/Site/usr/templates/b3-default3/themes/cornflower.less
+++ b/Site/usr/templates/b3-default3/themes/cornflower.less
@@ -5,7 +5,7 @@
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,16 +14,21 @@
 // This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
-
 // Cornflower color theme (blue)
 // use cornflower for @colour-set in theme.less
 // ------------------------------------------------
+// @active-color (dark) on @base-color (light)
+// @important-color (dark) on @alert-color (light)
+// @text-color (light)
+// @hover-color (light)
 
-@base-color: #3498DB;
-@text-color: #FFFFFF;
-@hover-color: #FFFFFF;
+@base-color: #3498db;
+@text-color: #ffffff;
+@hover-color: #ffffff;
 @font-color: #333333;
-@active-color: #004C8F;
-@alert-color: #ffee6b;
-@important-color: #8bcaf4;
-
+@active-color: #0258a4;
+@alert-color: #ffdc64;
+@important-color: #6e5501;
+@background-light: #f6fbfe;
+@background-medium: #d3ecfc;
+@background-dark: #99cff5;
