--- a/Site/usr/templates/b3-default3/themes/malva.less
+++ b/Site/usr/templates/b3-default3/themes/malva.less
@@ -5,7 +5,7 @@
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,15 +14,21 @@
 // This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
-
 // Malva color theme (violett)
 // use malva for @colour-set in theme.less
 // ------------------------------------------------
+// @active-color (dark) on @base-color (light)
+// @important-color (dark) on @alert-color (light)
+// @text-color (light)
+// @hover-color (light)
 
-@base-color: #8D41AA;
-@text-color: #FFFFFF;
-@hover-color: #FFFFFF;
+@base-color: #8d41aa;
+@text-color: #ffffff;
+@hover-color: #ffffff;
 @font-color: #333333;
 @active-color: #552768;
-@alert-color: #ffee6b;
-@important-color: #bb8ecc;
+@alert-color: #d1d1ef;
+@important-color: #3f3fb4;
+@background-light: #f8effb;
+@background-medium: #ead6f2;
+@background-dark: #c690db;
