--- a/Site/usr/templates/b3-default3/themes/sobipro.less
+++ b/Site/usr/templates/b3-default3/themes/sobipro.less
@@ -5,7 +5,7 @@
 // Email: sobi[at]sigsiu.net
 // Url: https://www.Sigsiu.NET
 
-// @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
+// @copyright Copyright (C) 2006 - 2017 Sigsiu.NET GmbH (https://www.sigsiu.net). All rights reserved.
 // @license GNU/GPL Version 3
 // This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
 // as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -14,15 +14,22 @@
 // This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
-
 // SobiPro color theme (SobiPro colors)
 // Use sobipro for @colour-set in theme.less
 // ------------------------------------------------
+// @active-color (dark) on @base-color (light)
+// @important-color (dark) on @alert-color (light)
+// @text-color (light)
+// @hover-color (light)
 
 @base-color: #993333;
-@text-color: #FFFFFF;
-@hover-color: #FFFFFF;
+@text-color: #ffffff;
+@hover-color: #ffffff;
 @font-color: #333333;
 @active-color: #000066;
-@alert-color: #CCCCCC;
-@important-color: #fec1af;
+@alert-color: #cccccc;
+@important-color: #feb495;
+@background-light: #fbeeee;
+@background-medium: #f9d1d1;
+@background-dark: #ed8282;
+
