(+) New colour theme 'pastels'

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2293,11 +2293,11 @@ body.modal-open {
 	table.SpCalendar td,
 	table.SpCalendar {
 		.background(light);
-		.borders(light);
+		.borders(medium);
 	}
 
 	table.SpCalendar td.SpCalSun {
-		.borders(medium);
+		.borders(dark);
 		.background(medium);
 	}
 
