--- a/Site/usr/templates/b3-default3/themes/cornfield.less
+++ b/Site/usr/templates/b3-default3/themes/cornfield.less
@@ -17,16 +17,15 @@
 // Cornfield color theme (yellow/orange/brown)
 // Use cornfield for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #ffc119;
-@text-color: #521b00;
-@hover-color: #ffcd47;
-@font-color: #333333;
+@basetext-color: #521b00;
 @active-color: #6b1e00;
+@activetext-color: #ffcd47;
+@font-color: #333333;
 @alert-color: #ffb866;
 @important-color: #b64a21;
 @background-light: #fff8e4;
