--- a/Site/usr/templates/b3-default3/themes/cornflower.less
+++ b/Site/usr/templates/b3-default3/themes/cornflower.less
@@ -17,16 +17,15 @@
 // Cornflower color theme (blue)
 // use cornflower for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #3498db;
-@text-color: #ffffff;
-@hover-color: #ffffff;
-@font-color: #333333;
+@basetext-color: #ffffff;
 @active-color: #0258a4;
+@activetext-color: #ffffff;
+@font-color: #333333;
 @alert-color: #ffdc64;
 @important-color: #6e5501;
 @background-light: #f6fbfe;
