--- a/Site/usr/templates/b3-default3/themes/custom.less
+++ b/Site/usr/templates/b3-default3/themes/custom.less
@@ -17,20 +17,18 @@
 // SobiPro custom color theme
 // Use custom for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #993333;
-@text-color: #ffffff;
-@hover-color: #ffffff;
-@font-color: #333333;
+@basetext-color: #ffffff;
 @active-color: #000066;
-@alert-color: #cccccc;
-@important-color: #feb495;
+@activetext-color: #ffffff;
+@font-color: #333333;
+@alert-color: #e7e7e7;
+@important-color: #fe4426;
 @background-light: #fbeeee;
 @background-medium: #f9d1d1;
 @background-dark: #ed8282;
-
 
