--- a/Site/usr/templates/b3-default3/themes/malva.less
+++ b/Site/usr/templates/b3-default3/themes/malva.less
@@ -17,16 +17,15 @@
 // Malva color theme (violett)
 // use malva for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #8d41aa;
-@text-color: #ffffff;
-@hover-color: #ffffff;
-@font-color: #333333;
+@basetext-color: #ffffff;
 @active-color: #552768;
+@activetext-color: #ffffff;
+@font-color: #333333;
 @alert-color: #d1d1ef;
 @important-color: #3f3fb4;
 @background-light: #f8effb;
