--- a/Site/usr/templates/b3-default3/themes/meadow.less
+++ b/Site/usr/templates/b3-default3/themes/meadow.less
@@ -17,16 +17,15 @@
 // Meadow color theme (green)
 // Use meadow for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #358b27;
-@text-color: #ffffff;
-@hover-color: #ffffff;
-@font-color: #333333;
+@basetext-color: #ffffff;
 @active-color: #2d5a26;
+@activetext-color: #ffffff;
+@font-color: #333333;
 @alert-color: #fce26e;
 @important-color: #907603;
 @background-light: #e8fae5;
