--- a/Site/usr/templates/b3-default3/themes/pastels.less
+++ b/Site/usr/templates/b3-default3/themes/pastels.less
@@ -17,16 +17,15 @@
 // Pastels color theme
 // Use pastels for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #d19846;
-@text-color: #ffffff;
-@hover-color: #ffffff;
-@font-color: #414243;
+@basetext-color: #ffffff;
 @active-color: #a5594c;
+@activetext-color: #ffffff;
+@font-color: #414243;
 @alert-color: #94dbae;
 @important-color: #3A6B61;
 @background-light: #f8f1dc;
