--- a/Site/usr/templates/b3-default3/themes/poppyseed.less
+++ b/Site/usr/templates/b3-default3/themes/poppyseed.less
@@ -17,16 +17,15 @@
 // Poppyseed color theme (shades of grey)
 // Use poppyseed for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #595959;
-@text-color: #ffffff;
-@hover-color: #ffffff;
-@font-color: #333333;
+@basetext-color: #ffffff;
 @active-color: #222222;
+@activetext-color: #ffffff;
+@font-color: #333333;
 @alert-color: #fce1d5;
 @important-color: #f0400a;
 @background-light: #f2f2f2;
