--- a/Site/usr/templates/b3-default3/themes/roses.less
+++ b/Site/usr/templates/b3-default3/themes/roses.less
@@ -18,16 +18,15 @@
 // Roses color theme (red/rose)
 // Use roses for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #e02620;
-@text-color: #ffffff;
-@hover-color: #ffffff;
-@font-color: #333333;
+@basetext-color: #ffffff;
 @active-color: #9c1a16;
+@activetext-color: #ffffff;
+@font-color: #333333;
 @alert-color: #81ec76;
 @important-color: #03741c;
 @background-light: #fff1f1;
