--- a/Site/usr/templates/b3-default3/themes/terra.less
+++ b/Site/usr/templates/b3-default3/themes/terra.less
@@ -17,19 +17,17 @@
 // SobiPro color theme (SobiPro colors)
 // Use sobipro for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #764719;
-@text-color: #ffffff;
-@hover-color: #ffffff;
-@font-color: #333333;
+@basetext-color: #ffffff;
 @active-color: #472300;
+@activetext-color: #ffffff;
+@font-color: #333333;
 @alert-color: #fbc41f;
 @important-color: #a83000;
 @background-light: #fce5cf;
 @background-medium: #efbc8b;
-;
 @background-dark: #e08c3b;
