--- a/Site/usr/templates/b3-default3/themes/waterfall.less
+++ b/Site/usr/templates/b3-default3/themes/waterfall.less
@@ -17,16 +17,15 @@
 // SobiPro color theme (SobiPro colors)
 // Use sobipro for @colour-set in theme.less
 // ------------------------------------------------
-// @active-color (dark) on @base-color (light)
-// @important-color (dark) on @alert-color (light)
-// @text-color (light)
-// @hover-color (light)
+// @basetext-color on @base-color
+// @activetext-color on active-color
+// @important-color on @alert-color
 
 @base-color: #00c8c8;
-@text-color: #ffffff;
-@hover-color: #ffffff;
-@font-color: #333333;
+@basetext-color: #ffffff;
 @active-color: #028482;
+@activetext-color: #ffffff;
+@font-color: #333333;
 @alert-color: #fce3e3;
 @important-color: #ef0c0c;
 @background-light: #e8fefe;
